Quick syntax/ formatting changes before push

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <div class="head">
 
         <div class="hmenu-lg bg-nav-1 tx-a-hc">
-            <h1>Header</h1>
-            <div class="search-1">
+            <h1>Header</h1><!--
+            --><div class="search-1">
                 <input type="search" placeholder="Search Site">
                 <button type="submit">GO</button>
             </div>
