Adding default image library and update formatting

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     <div class="page-lg pfont bg-pri-1">
         <div class="head">
 
-        <div class="hmenu-lg bg-nav-1 tx-a-hc">
+        <div class="head-lg bg-nav-1">
             <h1>Header</h1><!--
             --><div class="search-1">
                 <input type="search" placeholder="Search Site">
                 <button type="submit">GO</button>
             </div>
-            <a class="tx-a-hc" href="">nondrop</a>
+            <div class="hmenu-lg bg-nav-1">
+            <a href="">nondrop</a>
             <div class="h-drop">
                 <a class="h-drop-link">drop</a>
                 <div class="h-sub">
@@ -37,6 +38,7 @@
                     <a href="">sub2</a>
                 </div>
             </div>
+        </div>
         </div>
         <img class="toggle-r" src="Images/Arrow-up.png" alt="arrow-up">
     </div>
